# rusty_chat

./: .gitignore  Cargo.toml  README.md
rusty_chat/client/: Cargo.toml
rusty_chat/client/src/: main.rs
rusty_chat/common/: Cargo.toml
rusty_chat/common/src/: lib.rs
rusty_chat/server/: Cargo.toml
rusty_chat/server/src/: main.rs
rusty_chat/simple_client/: Cargo.toml
rusty_chat/simple_client/src/: main.rs  ui.rs
rusty_chat/simple_server/: Cargo.toml
rusty_chat/simple_server/src/: main.rs
