[package]
name = "simple_client"
version = "0.1.0"
authors = ["Shadoka"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

common = {path = "../common"}
bincode = "*"
crossbeam-channel = "*"
# console = {path = "C:\\workspace_console\\console"}
console = "0.10.0"